# inworld-tts-timing-validator

./: README.md  pyproject.toml
datasets/: sfw_validation_failures.json  validation_failures.json
examples/: basic_usage.py
src/inworld_timing_validator/: __init__.py  validator.py
src/inworld_tts_timing_validator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_validator.py
