[project]
name = "inworld-tts-timing-validator"
version = "0.1.0"
description = "Fast timing-based validation for Inworld TTS glitches"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "InTheMoment" }]
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

